# dead-code-finder

./: .gitignore  AGENTS.md  Cargo.toml  DOCUMENTATION.md  spec.md
crates/deadcode_cli/: Cargo.toml
crates/deadcode_cli/src/: main.rs
crates/deadcode_cli/tests/: cli.rs
crates/deadcode_python/: Cargo.toml
crates/deadcode_python/src/: config.rs  config_rules.rs  config_tests.rs  lib.rs  reachability.rs  reachability_callable_return.rs  reachability_class_metadata.rs  reachability_concrete_flow.rs  reachability_concrete_return.rs  reachability_entrypoint_tests.rs  reachability_lookup.rs  reachability_maps.rs  reachability_protocol.rs  reachability_tests.rs  source_locator.rs  symbol_aliases.rs  symbol_allow_comments.rs  symbol_append.rs  symbol_assignment_target.rs  symbol_assignments.rs  symbol_binary_ops.rs  symbol_branch_narrowing.rs  symbol_branch_types.rs  symbol_call_args.rs  symbol_call_references.rs  symbol_callable_alias.rs  symbol_callable_return_locals.rs  symbol_callable_values.rs  symbol_class_definition.rs  symbol_collector.rs  symbol_comprehension_narrowing.rs  symbol_comprehension_typeflow.rs  symbol_construction.rs  symbol_context.rs  symbol_datetime.rs  symbol_decorator_parameters.rs  symbol_expansion.rs  symbol_expr.rs  symbol_external.rs  symbol_external_flow.rs  (+32 more)
crates/deadcode_python/tests/: alias_fixture_projects.rs  annotation_fixture_projects.rs  any_fixture_projects.rs  boundary_fixture_projects.rs  decorator_fixture_projects.rs  dependency_override_fixture_projects.rs  exception_fixture_projects.rs  expression_fixture_projects.rs  (+17 more)
python/: pyproject.toml  setup.py
python/dead_code_finder/: __init__.py  __main__.py
(+280 files in other folders)
