[package]
name = "deadcode_cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "dead-code-finder"
path = "src/main.rs"

[dependencies]
deadcode_core = { path = "../deadcode_core" }
deadcode_python = { path = "../deadcode_python" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
