[package]
name = "deadcode_python"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
deadcode_core = { path = "../deadcode_core" }
ruff_python_ast = { package = "littrs-ruff-python-ast", version = "0.6.2" }
ruff_python_parser = { package = "littrs-ruff-python-parser", version = "0.6.2" }
ruff_text_size = { package = "littrs-ruff-text-size", version = "0.6.2" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
